HW-16: fixes to finalize project
